llv22 - avoid .metadata from git cache

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ DerivedData
 
 #local workspace
 Examples/Examples.xcodeproj/project.xcworkspace/xcshareddata/
+
+#local homekitService source code - avoid repeated .git
+homekitService/.metadata/
+homekitService/appidoa14be2awx/.git/
+homekitService/appidoa14be2awx/ROOT.war
