--- a/Examples/Examples/Examples-Info.plist
+++ b/Examples/Examples/Examples-Info.plist
@@ -41,5 +41,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This is necessary to discover your beacons, and for the in-background Notification Demo.</string>
 </dict>
 </plist>
